--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,7 @@
     --second-family: 'Merriweather', sans-serif;
     --third-family: 'Montserrat', sans-serif;
     --cardSize: 390px;
+    --slider-gap: 20px;
     scroll-behavior: smooth;
 }
 
@@ -314,7 +315,7 @@ ul {
 
 /* ---------------------------------stages------------------------------------- */
 .stages {
-    padding: 200px 0;
+    margin: 200px 0;
 }
 .stages__title-wrap {
     max-width: 810px;
@@ -333,31 +334,63 @@ ul {
     text-transform: initial;
     margin-left: 20px;
 }
+.stages__content {
+    position: relative;
+}
+
+.stages__content:has(.slider) {
+    padding-top: 128px;
+}
+/* .plane {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+} */
+/* Когда нет стиля будет самолет внизу */
+
+.stages__content:has(.slider) .plane {
+    position: absolute;
+    right: 0;
+    top: -10%;
+    z-index: 2;
+}
+
+.stages__card {
+    display: flex;
+    flex-direction: column;
+    background: url('../img/bg_card.png');
+    max-width: 394px;
+    padding: 60px 20px 34px;
+    gap: 28px;
+    margin: 0 auto;
+    min-height: 300px;
+    height: 100%;
+}
+.stages__item {
+    display: flex;
+    gap: 16px;
+    overflow: hidden;
+}
+.stages__num {
+    background: var(--white);
+    display: flex;
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+}
+.stages__text {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 120%;
+}
 /* ------------------------------players---------------------------------------- */
 .players {
     padding-bottom: 140px;
-}
-.players__title {
-    font-family: var(--second-family);
-    font-weight: 400;
-    font-size: 54px;
-    line-height: 120%;
-    text-transform: uppercase;
-    margin-bottom: 60px;
-}
-.players__slider {
-    position: relative;
-}
-.slider {
-    overflow: hidden;
-    padding-left: 20px;
-}
-.players__list {
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 20px;
-    width: max-content;
-    transition: all 0.5s ease-out;
 }
 .player {
     width: var(--cardSize);
@@ -387,25 +420,7 @@ ul {
     opacity: 0.6;
     text-align: center;
 }
-.players__slider_btns {
-    display: flex;
-    align-items: center;
-    gap: 14px;
-    position: absolute;
-    right: 0;
-    top: -25%;
-}
-@media (max-width: 1000px) {
-    .players__slider {
-        display: flex;
-        flex-direction: column;
-        gap: 40px;
-    }
-    .players__slider_btns {
-        position: static;
-        align-self: center;
-    }
-}
+
 /* ------------------------------footer---------------------------------------- */
 .footer {
     background-color: var(--beige);
@@ -421,7 +436,6 @@ ul {
 /* ---------------------------@media---------------------------------- */
 @media (max-width: 820px) {
     .container {
-        /* --width: 1222px; */
         --padding: 40px;
     }
     .hero__content {
@@ -465,12 +479,6 @@ ul {
     .players {
         padding-bottom: 120px;
     }
-    .players__title {
-        font-size: 44px;
-    }
-    /* .player {
-        min-width: 335px;
-    } */
 }
 
 @media (max-width: 520px) {
@@ -514,7 +522,7 @@ ul {
     }
 
     .stages {
-        padding: 120px 0;
+        margin: 120px 0;
     }
     .stages__title-wrap {
         max-width: 340px;
@@ -565,9 +573,7 @@ ul {
     .players {
         padding-bottom: 100px;
     }
-    .players__title {
-        font-size: 36px;
-    }
+
     footer {
         padding-bottom: 60px;
     }
