--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@
     --white: #fff;
     --yellow: #fbce51;
     --gray: #d6d6d6;
+    --gray-dots: #d9d9d9;
     --second-gray: #d0d0d0;
     --blue: #3057a2;
     --beige: #e9ded4;
@@ -315,7 +316,8 @@ ul {
 
 /* ---------------------------------stages------------------------------------- */
 .stages {
-    margin: 200px 0;
+    margin-top: 200px;
+    margin-bottom: 200px;
 }
 .stages__title-wrap {
     max-width: 810px;
@@ -338,34 +340,60 @@ ul {
     position: relative;
 }
 
-.stages__content:has(.slider) {
-    padding-top: 128px;
-}
-/* .plane {
+.plane {
     position: absolute;
-    right: 0;
+    right: -7%;
     bottom: 0;
     z-index: 2;
-} */
-/* Когда нет стиля будет самолет внизу */
+}
 
-.stages__content:has(.slider) .plane {
-    position: absolute;
-    right: 0;
-    top: -10%;
-    z-index: 2;
+.stages__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 112px);
+    gap: 20px;
+}
+
+.stages__list :nth-child(3) {
+    grid-column: 3 / 4;
+    grid-row: 1 /3;
+}
+.stages__list :nth-child(6) {
+    grid-column: 1 / 2;
+    grid-row: 3 /4;
+}
+.stages__list :nth-child(7) {
+    width: 100%;
+    grid-column: 2/4;
+    grid-row: 3 /4;
+}
+
+.stages__list :nth-child(7) .stages__text {
+    max-width: 446px;
 }
 
 .stages__card {
     display: flex;
     flex-direction: column;
     background: url('../img/bg_card.png');
+    background-repeat: no-repeat;
+    background-size: cover;
     max-width: 394px;
     padding: 60px 20px 34px;
     gap: 28px;
     margin: 0 auto;
     min-height: 300px;
     height: 100%;
+}
+
+.stages__card-li {
+    display: flex;
+    flex-direction: column;
+    background: url('../img/bg_card.png');
+    padding: 20px;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .stages__item {
     display: flex;
@@ -479,6 +507,15 @@ ul {
     .players {
         padding-bottom: 120px;
     }
+    .stages__content {
+        padding-top: 128px;
+    }
+    .stages__content .plane {
+        position: absolute;
+        right: 0;
+        top: -10%;
+        z-index: 2;
+    }
 }
 
 @media (max-width: 520px) {
@@ -522,7 +559,8 @@ ul {
     }
 
     .stages {
-        margin: 120px 0;
+        margin-top: 120px;
+        margin-bottom: 120px;
     }
     .stages__title-wrap {
         max-width: 340px;
